Version 2.1.4 - The "So what? If it's new, it has to be good" version
----------
2006-06-11

	GonoszTopi:
		* Sed denoiser - removes excessive messages from compilation - 
		Thanks to Vollstrecker for the idea and discussions.

	Kry:
		* Fixed mldonkey_importer to work with mldonkey >= 2.7.6

	Special Thanks to:
		* Mr Tyler Durden, for his words of wisdom.

--------------------------------------------------------------------------------

Version 2.1.3 - The "We missed the 6/6/6 devil release and we're very sad" version
----------
2006-06-11

	GonoszTopi:
		* Fixed windows compilation, that was still broken.
		* Fixed locale bug. See http://forum.amule.org/thread.php?threadid=10178&sid=

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.
		* Fixed SmartLowID checks based on a patch/report by eyalzo.

	Kry:
		* Fixed GonozsTopi's fix for locale bug (double init).
		* Added script to import mldonkey downloads into aMule.
		* Fixed "0000867: French traduction is uncorrect grammatically".

	rene06:
		* Allow amulecmd to execute a global, local or kad search. Then
		  you can get the results, which are shown in a list. From that
		  list you can choose one file to download.

	Special Thanks to:
		* Me, because I'm the only one bothering to compile the changelogs. Go me!

--------------------------------------------------------------------------------

Version 2.1.2 - The "We're on fire!" version
----------
2006-05-28

	GonoszTopi:
		* Fixed some warning messages.
		* Fixed windows compilation.
		* Fixed compilation in release mode.

	Kry:
		* Fixed initialization of Partfile, Server and Knownfile objects 
		  on remote GUI. 
		  This fixes a good bunch of bugs, including but not limited to: 
			* 0000741: the total speed possible is incorrect.
			* 0000774: Amulegui show comments ->segmentation fault.
			* 0000605: Incorrect ICH statistics data
			* 0000812: amulegui: wrong ed2k ports in server list
			* 0000776: amulegui segfaults